--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-/* ./src/styles/app.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
