--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --main-font: 'Ubuntu', sans-serif;
+}
+
+html {
+  font-size: 10px;
+}
+
+body {
+  font-family: var(--main-font);
+}
