--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
+@import "./assets/_variables.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --main-font: 'Ubuntu', sans-serif;
-}
-
 html {
   font-size: 10px;
+  font-family: var(--fallback-font);
 }
 
 body {
